tests/negative/typecheck/addr_cast_no_context.orng
// addr_cast_no_context.orng:7:23: error: cannot infer type to cast to, try using `as`
//     let y = @addr_cast(x)
//                      ^
// 
fn main() -> Int {
    let x = 4
    let y = @addr_cast(x)
}
